# drone-badge-server

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  config.toml.sample  const.go  go.mod  go.sum  server.go
badge/: BUILD.bazel  badge.go
database/: BUILD.bazel  db.go  db_test.go
drone/: BUILD.bazel  client.go
