load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/atpons/drone-badge-server
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "const.go",
        "server.go",
    ],
    importpath = "github.com/atpons/drone-badge-server",
    visibility = ["//visibility:private"],
    deps = [
        "//badge:go_default_library",
        "//database:go_default_library",
        "//drone:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)

go_binary(
    name = "project",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
