load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["db.go"],
    importpath = "github.com/atpons/drone-badge-server/database",
    visibility = ["//visibility:public"],
    deps = ["@com_github_hashicorp_go_memdb//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["db_test.go"],
    embed = [":go_default_library"],
)
