load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/atpons/drone-badge-server/drone",
    visibility = ["//visibility:public"],
    deps = [
        "//database:go_default_library",
        "@com_github_drone_drone_go//drone:go_default_library",
        "@com_github_hashicorp_go_memdb//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
